--- a/cloud-computing-applications/assignment/cloudapp-mp5/pom.xml
+++ b/cloud-computing-applications/assignment/cloudapp-mp5/pom.xml
@@ -22,13 +22,13 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.10</artifactId>
-            <version>1.5.0</version>
+            <version>[2.2.0,)</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-mllib_2.10</artifactId>
-            <version>1.5.0</version>
+            <version>[2.2.0,)</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
